# humanoid-robotics

./: .gitignore  README.md
brain/: CMakeLists.txt  package.xml
brain/include/brain/: brain.h
brain/launch/: brain.launch  system.launch
brain/msg/: Access.msg  Feedback.msg
brain/nodes/: handleTerminal.py  handleTreminal.py  trackface.py
brain/resources/: users.yaml
brain/src/: brain.cpp  brain_node.cpp
brain/srv/: RequestTerminal.srv
face_detection/: CMakeLists.txt  install_dlib.sh  package.xml
face_detection/doc/: Doxyfile
face_detection/include/face_detection/: face_detection.h  face_tracking.h  test.h
face_detection/launch/: face_detection.launch  usb_cam_.launch
face_detection/msg/: Face.msg  MoveBase.msg
face_detection/src/: face_detection.cpp  face_detection_node.cpp  face_tracking.cpp  test.cpp
language/: AgentMain.py  CMakeLists.txt  DialogItem.py  InputAction.py  OutputAction.py  SpeechSynthesizer.py  package.xml
language/launch/: language.launch
language/nodes/: Agent.py  AgentMain.py  Dialog.py  InputItem.py  Login.py  OutputItem.py  Pattern.py  SpeechSynthesizer.py  WaitItem.py  WorkingMemory.py  id.txt
servo/: CMakeLists.txt  package.xml
servo/firmware/: CMakeLists.txt  servo.cpp
servo/launch/: servo.launch
